<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/title_activity_profile"
            android:textColor="@color/colorGreen"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/weightGoalQT"
            android:textColor="@color/colorBlue" />

        <RadioGroup
            android:id="@+id/weightGoalGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/btnMaintainWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weightMaintainQT" />

            <RadioButton
                android:id="@+id/btnLoseWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weightLoseQT" />

            <RadioButton
                android:id="@+id/btnGainWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weightGainQT" />

            <Button
                android:id="@+id/submitBtn"
                style="@style/btnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/submitBtn" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
